--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
   font-family: Poppins, sans-serif, system-ui;
-  background-color: #5f27cd;
-  color: white;
+  background-color: #3366CC;
+  color: #fff;
 }
