--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
   font-family: Poppins, sans-serif, system-ui;
-  background-color: #3366CC;
+  background-color: #3c40c6;
   color: #fff;
 }
